tests/snapshots/tui_snapshots__degraded_inventory_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_degraded(&temporary, render(&app, 80, 24))"
---
 ◆ skilled  global                            ● degraded · metadata unavailable
 1 Inventory ·1 │ 2 Sources      │ 3 Updates      │ 4 Doctor       │

▌ Global inventory  1 skill
× metadata unavailable:
<TEMP>/data/sk
illed.sqlite3: filesystem operation failed: No such file or directory (os error
2). The agent selection could not be read; all detected roots were scanned
read-only. Writes are refused.
▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
  SKILL                  SOURCE          CLAUDE  CODEX  OPENCODE  HEALTH
▌ portable               unverified      U       -      -         U unverified











 Tab/Shift-Tab Region   Enter Open   / Filter   2 Sources   4 Doctor   q Quit …
