tests/snapshots/tui_snapshots__degraded_settings_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_degraded(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆ skilled  global                                                                                                    ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                                                                                                                      ▏
▕ Settings   navigation is locked while this dialog is open                          ● degraded · metadata unavailable ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                       ┌ Settings ────────────────────────────────────────────── global scope ┐                       ▏
▕                       │                                                                      │                       ▏
▕                       │  Setup                                                               │                       ▏
▕                       │                                                                      │                       ▏
▕                       │  ▌ Rerun setup                                                       │                       ▏
▕                       │                                                                      │                       ▏
▕                       │  Rerunning setup is unavailable while metadata cannot be written.    │                       ▏
▕                       │  Inventory, Sources, and Doctor remain available read-only.          │                       ▏
▕                       │  Esc closes Settings.                                                │                       ▏
▕                       │                                                                      │                       ▏
▕                       │  ──────────────────────────────────────────────────────────────────  │                       ▏
▕                       │  No agent is launched                                     Esc Close  │                       ▏
▕                       │                                                                      │                       ▏
▕                       └──────────────────────────────────────────────────────────────────────┘                       ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕ ? Help   Esc Close                                                                                                   ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
