tests/snapshots/tui_snapshots__discover_sources_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled  global                                          ● setup in progress
 Setup · Discover sources   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━ ○──────── ○──────── ○────────  │
  │  STEP 4 / 7                                                              │
  │  Discover sources                                                        │
  │                                                                          │
  │  - automatic discovery unavailable                                       │
  │                                                                          │
  │  Registered sources: 0                                                   │
  │  Press a to inspect a known local Git checkout.                          │
  │  Skilled never scans the entire home directory by default.               │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Setup is persisted when it finishes          Esc Back   Enter Continue  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 a Add source   Enter Continue   Esc Back   ? Help   q Quit
