tests/snapshots/tui_snapshots__first_run_welcome_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 120, 40)"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆ skilled  global                                                                                                    ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                                                                                                                      ▏
▕ Setup · Welcome and scope   navigation is locked during setup                                    ● setup in progress ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                                                                                                                      ▏
▕             ┌ First-run setup ───────────────────────────────────────────────────── global skills only ┐             ▏
▕             │                                                                                          │             ▏
▕             │  ●━━━━━━━━━━━ ○─────────── ○─────────── ○────────── ○────────── ○────────── ○──────────  │             ▏
▕             │  STEP 1 / 7                                                                              │             ▏
▕             │  Welcome and scope                                                                       │             ▏
▕             │                                                                                          │             ▏
▕             │  Skilled manages global skills for Claude Code, Codex, and OpenCode.                     │             ▏
▕             │  This setup configures agents and local source metadata.                                 │             ▏
▕             │                                                                                          │             ▏
▕             │  No coding agent is launched during setup or diagnosis.                                  │             ▏
▕             │  Existing physical files, directories, and unknown links are never overwritten.          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │                                                                                          │             ▏
▕             │  ──────────────────────────────────────────────────────────────────────────────────────  │             ▏
▕             │  Setup is persisted when it finishes                                     Enter Continue  │             ▏
▕             │                                                                                          │             ▏
▕             └──────────────────────────────────────────────────────────────────────────────────────────┘             ▏
▕                                                                                                                      ▏
▕                                                                                                                      ▏
▕ Enter Continue   ? Help   q Quit                                                                                     ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
